# msgflow

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CLAUDE.md  README.md  README.zh-CN.md  TODO.md
.github/workflows/: deploy-cf-pages.yml  deploy-gh-pages.yml  feishu-task.yml  fetch-article.yml  (+4 more)
docs/: README.md  ai-secrets-config-guide.md  architecture-decisions.md  capabilities-refactor-tasks.md  code-quality-fix-design.md  context-manager-design.md  ctx-cli-zig-design.md  deployment-guide.md  feishu-doc-fetch.md  feishu-oauth-setup.md  notification-strategy.md  pycore-usage-optimization.md  redesign-v2.md  telegram-bot-setup.md  user-credentials-guide.md  workflow-slim-design.md
python/: pyproject.toml
python/src/: run_task.py
python/src/articles/: fetched-20260523193428.md
python/src/fetchers/: __init__.py  _feishu_api.py  _feishu_auth.py  _feishu_parser.py  _registry.py  feishu.py  jina.py  weixin.py
python/src/lib/: __init__.py  ai_runner.py  feishu_oauth.py  file_store.py  interfaces.py  logger.py  md_fixer.py  protocols.py  registry.py
python/src/pipelines/: __init__.py  distill.py  fetch.py  format_article.py  publish.py  query.py  rewrite.py
python/src/writers/: __init__.py  feishu.py  mowen.py
python/tests/: test_tasks.py
scripts/: format_article.py
site/: astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
tools/: hot_topics.py
worker/: AGENTS.md  index.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
worker-v2/: AGENTS.md  package-lock.json  package.json  pnpm-workspace.yaml  schema.sql  wrangler.toml
(+212 files in other folders)
