[project]
name = "msgflow-tasks"
version = "0.1.0"
description = "msgflow Python task runner"
requires-python = ">=3.11"
dependencies = [
    "pycore @ git+https://github.com/ouraihub/pycore.git",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
